Add id to the codedata